--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,24 @@
 version: '3.8'
 
 services:
-  api-gateway:
+  users-ms:
     build: .
     ports:
       - "8000:8000"
+    environment:
+      - DB_URL=postgresql://docker:docker@db:5432/users
+    depends_on:
+      - db
+  db:
+    image: postgres:15
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=docker
+      - POSTGRES_PASSWORD=docker
+      - POSTGRES_DB=users
+    volumes:
+      - users_data:/var/lib/postgresql/data
 
+volumes:
+  users_data:
