--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.12.0
 annotated-types==0.5.0
 anyio==3.7.1
 certifi==2023.7.22
@@ -14,10 +15,12 @@ idna==3.4
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.2.4
 MarkupSafe==2.1.3
 orjson==3.9.7
 packaging==23.2
 pluggy==1.3.0
+psycopg2-binary==2.9.9
 pydantic==2.3.0
 pydantic-extra-types==2.1.0
 pydantic-settings==2.0.3
@@ -29,6 +32,7 @@ python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0.1
 sniffio==1.3.0
+SQLAlchemy==2.0.21
 starlette==0.27.0
 typing_extensions==4.7.1
 ujson==5.8.0
