--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,21 @@ alembic==1.12.0
 annotated-types==0.5.0
 anyio==3.7.1
 bcrypt==4.0.1
+cachetools==5.3.1
 certifi==2023.7.22
+charset-normalizer==3.3.0
 click==8.1.7
 coverage==7.3.2
 dnspython==2.4.2
 email-validator==2.0.0.post2
 fastapi==0.103.1
+google-api-core==2.12.0
+google-auth==2.23.3
+google-cloud-pubsub==2.18.4
+googleapis-common-protos==1.60.0
+grpc-google-iam-v1==0.12.6
+grpcio==1.59.0
+grpcio-status==1.59.0
 h11==0.14.0
 httpcore==0.18.0
 httptools==0.6.0
@@ -21,7 +30,11 @@ MarkupSafe==2.1.3
 orjson==3.9.7
 packaging==23.2
 pluggy==1.3.0
+proto-plus==1.22.3
+protobuf==4.24.4
 psycopg2-binary==2.9.9
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pydantic==2.3.0
 pydantic-extra-types==2.1.0
 pydantic-settings==2.0.3
@@ -32,11 +45,14 @@ pytest-cov==4.1.0
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0.1
+requests==2.31.0
+rsa==4.9
 sniffio==1.3.0
 SQLAlchemy==2.0.21
 starlette==0.27.0
 typing_extensions==4.7.1
 ujson==5.8.0
+urllib3==2.0.6
 uvicorn==0.23.2
 uvloop==0.17.0
 watchfiles==0.20.0
