--- a/app.yaml
+++ b/app.yaml
@@ -6,6 +6,12 @@ entrypoint: gunicorn -w 1 -k uvicorn.workers.UvicornWorker main:app
 
 instance_class: F2
 
+readiness_check:
+    path: "/health"  
+    check_interval_sec: 60  
+    timeout_sec: 60  
+    failure_threshold: 5
+
 env_variables:
     DB_URL: VAR_DB_URL
     CANDIDATE_CREATION_TOPIC: VAR_CANDIDATE_CREATION_TOPIC
