feat: ajustes creación cliente

--- a/app.yaml
+++ b/app.yaml
@@ -15,7 +15,7 @@ readiness_check:
 env_variables:
     DB_URL: VAR_DB_URL
     CANDIDATE_CREATION_TOPIC: VAR_CANDIDATE_CREATION_TOPIC
-    GOOGLE_CLOUD_PROJECT: VAR_PROJECT_ID
+    CUSTOMER_CREATION_TOPIC: VAR_CUSTOMER_CREATION_TOPIC
 
 vpc_access_connector:
     name: projects/VAR_PROJECT_ID/locations/VAR_REGION/connectors/VAR_VPC_CONNECTOR
